--- a/styles/style.css
+++ b/styles/style.css
@@ -20,3 +20,268 @@ li,
 figure {
   margin: 0;
 }
+
+:root {
+  --bg-color: #f3efec;
+  --text-color: #312a4e;
+  --accent-color: #ffab6b;
+  --main-font: Raleway, sans-serif;
+  --accent-font: "STIX Two Text", serif;
+}
+
+:root .theme_dark {
+  --bg-color: #171717;
+  --text-color: #b3b3b3;
+  --accent-color: transparent;
+}
+
+.page {
+  background-color: var(--bg-color, #f3efec);
+  color: var(--text-color, #312a4e);
+  font-family: var(--main-font, Raleway, sans-serif);
+}
+
+.header {
+  padding-block-start: 10%;
+}
+
+.heading {
+  font-family: var(--accent-font, "STIX Two Text", serif);
+  text-align: center;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 0.9;
+}
+
+.content-section {
+  padding: 0 5vw;
+}
+
+.header__title {
+  font-size: clamp(3.75rem, 2.5rem + 5.5556vw, 7.5rem);
+  margin-block-end: 40px;
+}
+
+.content__title {
+  font-size: 30px;
+  padding: 7% 0 2.5%;
+}
+
+.content__text-block {
+  font-size: 18px;
+}
+
+.content__text-block .content__paragraph:not(:last-of-type) {
+  margin-block-end: 1.5em;
+}
+
+.content__link {
+  color: currentColor;
+}
+
+.content__link:hover {
+  text-decoration-color: rgba(49, 42, 78, 0.5);
+}
+
+.theme_dark .content__link:hover {
+  text-decoration-color: rgba(179, 179, 179, 0.5);
+}
+
+.content__link:focus-visible {
+  outline: currentColor solid 1px;
+  outline-offset: 1px;
+}
+
+.content__blockquote {
+  font-style: italic;
+  line-height: 2;
+  inline-size: 75%;
+  margin: auto;
+  margin-block-end: 1.5em;
+}
+
+.content__list {
+  padding: 0;
+  padding-inline-start: 40px;
+  list-style-type: none;
+}
+
+.content__list-item {
+  position: relative;
+}
+
+.content__list-item:not(:last-of-type) {
+  margin-block-end: 10px;
+}
+
+.content__list-item::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  inline-size: 15px;
+  block-size: 15px;
+  background-image: url(../images/marker-light.svg);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  inset-block-start: 3px;
+  inset-inline-start: -25px;
+}
+
+.theme_dark .content__list-item::before {
+  background-image: url(../images/marker-dark.svg);
+}
+
+.content__text-block_type_first-lettered
+  .content__paragraph:first-of-type:first-letter {
+  display: inline-block;
+  font-size: 30px;
+  font-weight: 700;
+  background-color: var(--accent-color, #ffab6b);
+  padding: 0 4px;
+  margin-inline-end: 1px;
+}
+
+.theme_dark
+  .content__text-block_type_first-lettered
+  .content__paragraph:first-of-type:first-letter {
+  background-color: var(--accent-color, transparent);
+  border: 1px solid currentColor;
+}
+
+.content__figure {
+  margin: 7% 0;
+  inline-size: calc(100% + 10vw);
+  position: relative;
+  inset-inline-start: -5vw;
+}
+
+.content__picture {
+  inline-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__picture-caption {
+  padding: 20px 0;
+  text-align: center;
+  border-block-end: 1px solid currentColor;
+}
+
+.content__card {
+  margin-block-start: 7%;
+  padding: 10px;
+  border: 1px solid currentColor;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  aspect-ratio: 4/3;
+}
+
+.content__card-title {
+  font-size: 60px;
+}
+
+.colored-text {
+  position: relative;
+  white-space: nowrap;
+}
+
+.colored-text::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  background-color: var(--accent-color, #ffab6b);
+  inset-block-end: 0.17em;
+  inset-inline-start: -1%;
+  block-size: 0.25em;
+  inline-size: 103%;
+}
+
+.theme_dark .colored-text::after {
+  background-color: var(--accent-color, transparent);
+  background-image: url(../images/pattern.svg);
+}
+
+.content__card-subtitle {
+  font-size: 18px;
+}
+
+.header__menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 5vw;
+}
+
+.header__theme-toggler {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.header__theme-button {
+  font-family: inherit;
+  font-size: 18px;
+  color: currentColor;
+  background-color: transparent;
+  cursor: pointer;
+  line-height: 1.04;
+  padding: 0;
+  border: none;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.header__theme-button:not(.header__theme-button_is-active):hover {
+  text-decoration: underline;
+  text-decoration-color: rgba(49, 42, 78, 0.5);
+}
+
+.theme_dark .header__theme-button:not(.header__theme-button_is-active):hover {
+  text-decoration-color: rgba(179, 179, 179, 0.5);
+}
+
+.header__theme-button:focus-visible {
+  outline: currentColor solid 1px;
+  outline-offset: 1px;
+}
+
+.header__theme-button:disabled {
+  pointer-events: none;
+}
+
+.header__theme-button_is-active {
+  font-weight: 700;
+}
+
+.header__theme-button_is-active::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  background-color: var(--accent-color, #ffab6b);
+  inset-block-end: 0.15em;
+  inset-inline-start: -4%;
+  block-size: 0.35em;
+  inline-size: 110%;
+}
+
+.theme_dark .header__theme-button_is-active::after {
+  background-color: var(--accent-color, transparent);
+  background-image: url(../images/pattern.svg);
+}
+
+.footer {
+  border-block-start: 1px solid currentColor;
+  margin-block-start: 10%;
+  padding: 2.5%;
+}
+
+.footer__copyright {
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+}
